Add basic application.hbs styling

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,19 @@
-<h2 id="title">Welcome to Ember</h2>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
 
-{{outlet}}
+<div class="navbar-fixed">
+  <nav class="#fafafa grey lighten-5">
+    <div class="nav-wrapper">
+      <a href="#" class="blog-logo">MESSAGE BOARD</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="about">ABOUT</a></li>
+        <li><a href="contact">CONTACT</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
+
+<body>
+
+    {{outlet}}
+
+</body>
