--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,11 @@
-{{outlet}}
+<div class="container">
+  <div class="index-body">
+    <div class="row">
+      {{#each model.questions as |question|}}
+        <p>
+          {{question.inquiry}}
+        </p>
+      {{/each}}
+    </div>
+  </div>
+</div>
