--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,8 +2,10 @@
   <div class="index-body">
     <div class="row">
       {{#each model.questions as |question|}}
-        <h5>Q: {{question.inquiry}}</h5>
-        <p>By: {{question.author}}</p>
+        {{#link-to 'question' question.id}}
+          <h5>Q: {{question.inquiry}}</h5>
+          <p>By: {{question.author}}</p>
+        {{/link-to}}
       {{/each}}
     </div>
   </div>
