--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -3,18 +3,18 @@
     <div class="container">
       <form>
         <div class="form-group">
-          <label for="author">Author</label>
-          {{input value=authorInput id="author" class="form-control"}}
+          <label for="authorInput">Author</label>
+          {{input value=authorInput id="authorInput" class="form-control"}}
         </div>
 
         <div class="form-group">
-          <label for="question">Question</label>
-          {{input value=questionInput id="question" class="form-control"}}
+          <label for="inquiryInput">Question</label>
+          {{input value=inquiryInput id="inquiryInput" class="form-control"}}
         </div>
 
         <div class="form-group">
-          <label for="note">Notes</label>
-          {{input value=noteInput id="note" class="form-control"}}
+          <label for="noteInput">Notes</label>
+          {{input value=noteInput id="noteInput" class="form-control"}}
         </div>
 
         <button class="waves-effect waves-green btn saveNewQuestion"{{action 'save1'}}>Save</button>
