Add save method for a new question

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -8,5 +8,8 @@
         {{/link-to}}
       {{/each}}
     </div>
+    <div class="newQuestion">
+      {{new-question save2="save3"}}
+    </div>
   </div>
 </div>
