Add question tile structure, with delete button and sendAction destroyQuestion

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,1 +1,9 @@
-{{yield}}
+<div class="col-sm-6">
+  {{#link-to 'question' question.id}}
+    <h5>Q: {{question.inquiry}}</h5>
+    <p>By: {{question.author}}</p>
+  {{/link-to}}
+</div>
+<div class="delete-question">
+  <button class="waves-effect waves-green btn deleteBtn" {{action 'delete' question}}>Delete</button>
+</div>
