--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,10 +2,7 @@
   <div class="index-body">
     <div class="row">
       {{#each model.questions as |question|}}
-        {{#link-to 'question' question.id}}
-          <h5>Q: {{question.inquiry}}</h5>
-          <p>By: {{question.author}}</p>
-        {{/link-to}}
+        {{question-tile question=question destroyQuestion="destroyQuestion"}}
       {{/each}}
     </div>
     <div class="newQuestion">
