--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -3,7 +3,9 @@
     <h5>Q: {{question.inquiry}}</h5>
     <p>By: {{question.author}}</p>
   {{/link-to}}
-</div>
-<div class="delete-question">
-  <button class="waves-effect waves-green btn deleteBtn" {{action 'delete' question}}>Delete</button>
+  <hr/>
+  {{update-question question=question update="update"}}
+  <div class="delete-question">
+    <button class="waves-effect waves-green btn deleteBtn" {{action 'delete' question}}>Delete</button>
+  </div>
 </div>
