--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,7 +2,7 @@
   <div class="index-body">
     <div class="row">
       {{#each model.questions as |question|}}
-        {{question-tile question=question destroyQuestion="destroyQuestion"}}
+        {{question-tile question=question update="update" destroyQuestion="destroyQuestion"}}
       {{/each}}
     </div>
     <div class="newQuestion">
