--- a/app/templates/components/update-answer.hbs
+++ b/app/templates/components/update-answer.hbs
@@ -1,1 +1,19 @@
-{{yield}}
+{{#if updateAnswerForm}}
+    <div class="container">
+      <form>
+        <div class="form-group">
+          <label for="reply">Reply</label>
+          {{input value=replyInput id="reply" class="form-control" placeholder=answer.reply}}
+        </div>
+
+        <div class="form-group">
+          <label for="author">Author</label>
+          {{input value=authorInput id="author" class="form-control"}}
+        </div>
+
+        <button class="waves-effect waves-green btn saveNewAnswer"{{action 'update' answer}}>Save</button>
+      </form>
+    </div>
+{{else}}
+    <button class="waves-effect waves-green btn newAnswerForm"{{action 'updateAnswerForm'}}>Edit</button>
+{{/if}}
