--- a/app/templates/components/update-answer.hbs
+++ b/app/templates/components/update-answer.hbs
@@ -2,13 +2,13 @@
     <div class="container">
       <form>
         <div class="form-group">
-          <label for="reply">Reply</label>
-          {{input value=replyInput id="reply" class="form-control" placeholder=answer.reply}}
+          <label for="replyInput">Reply</label>
+          {{input value=replyInput id="replyInput" class="form-control"}}
         </div>
 
         <div class="form-group">
           <label for="author">Author</label>
-          {{input value=authorInput id="author" class="form-control"}}
+          {{input value=authorInput id="authorInput" class="form-control"}}
         </div>
 
         <button class="waves-effect waves-green btn saveNewAnswer"{{action 'update' answer}}>Save</button>
