Change header sizes

--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,7 +1,7 @@
 <div class="container">
-  <h3>More info about {{question.author}}'s question:</h3>
-  <h3>Question: {{question.inquiry}}</h3>
-  <h3>Notes: {{question.note}}</h3>
+  <h4>More info about {{model.author}}'s question:</h4>
+  <h5>Q: {{model.inquiry}}</h5>
+  <h5>Notes: {{model.note}}</h5>
   <hr>
 
   {{new-answer question=model save2="save3"}}
