--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -3,7 +3,8 @@
   <h5>Q: {{model.inquiry}}</h5>
   <h5>Notes: {{model.note}}</h5>
   <hr>
-
+  <button class="waves-effect waves-green btn favoriteBtn" {{action 'favorite' model}}>Favorite</button>
+  <br><br>
   {{new-answer question=model save2="save3"}}
 
   <h4>Answers:</h4>
