Add html to display favorites better

--- a/app/templates/components/display-favorites.hbs
+++ b/app/templates/components/display-favorites.hbs
@@ -1,5 +1,6 @@
 <div>
   {{#each favoriteQuestions.favorites as |favorite|}}
-    <p>{{favorite.inquiry}}</p>
+    <h5>{{favorite.inquiry}}</h5>
+    <h6>By: {{favorite.author}}</h6>
   {{/each}}
 </div>
