--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -7,12 +7,7 @@
   <br><br>
   {{new-answer question=model save2="save3"}}
   <br>
-  <button class="waves-effect waves-green btn upvoteBtn" {{action 'upvote' model}}>Upvote</button>
-  <br><br>
+
   <h4>Answers:</h4>
-  {{#each model.answers as |answer|}}
-    <div>
-      {{answer-detail answer=answer update="update"}}
-    </div>
-  {{/each}}
+  {{answer-list answers=model.answers upvote="upvote"}}
 </div>
