--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,4 +1,5 @@
 <div class="col-sm-12">
+  {{no-answer question}}
   {{#link-to 'question' question.id}}
     <h5>Q: {{question.inquiry}}</h5>
     <p>By: {{question.author}}</p>
